Revert "首次导入项目"
This reverts commit 75e100ef87e050555ed06dded619325a8ac8e788.

--- a/login_conf.ini
+++ b/login_conf.ini
@@ -1,13 +1,27 @@
 [correct_input]
 user = 15810346836
-pwd = 111111q
+pwd = abc123
+[correct_input1]
+user = 15800000002
+pwd = abc123
+[Infinite_time_purchase]
+user = 15800000001
+pwd = abc123
 [unreal_name_input]
-user = 1840521596@qq.com
+user = 15800000002
+pwd = abc123
+[unreal_name_input1]
+user = 15810346836
 pwd = abc123
 [wrong_input]
 user = 15810346836
-pwd = abc123
+pwd = 1qaz
 [register_input]
 user = 18758183436
+pwd = abc123
 [unregister_input]
+user = 15800000002
+pwd = abc123
+[unregister_input1]
 user = 15810346836
+pwd = abc123
